# pyosPackage

./: .all-contributorsrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  changelog.md  pyproject.toml  readme-backup.md
.devcontainer/: devcontainer.json
.github/: SUPPORT.md  dependabot.yml
.github/workflows/: build-publish-pypi.yml  docs.yml  lint.yml  publish-pypi.yml  release.yml  test.yml
docs/: conf.py  hatch-envs-scripts.md  index.md  setup-sphinx.md
docs/documentation/: code-format-lint.md  hatch-envs-scripts.md  index.md  publish-docs.md  setup-sphinx.md
src/pyospackage/: __init__.py  add_numbers.py  plot_pyramid.py  simple_arithmetic.py
tests/: __init__.py
tests/system/: test_import.py
tests/unit/: test_example.py
