[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyospackage"
description = "A package that adds numbers together"
readme = "README.md"
version = "0.1.11"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Leah Wasser", email = "leah@pyopensci.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
Homepage = "https://pypi.org/project/pyospackage/"
Documentation = "https://github.com/pyopensci/pyospackage"
Issues = "https://github.com/pyopensci/pyospackage/issues"
Source = "https://github.com/pyopensci/pyospackage"


[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "sphinx-autobuild",
  "sphinx-inline-tabs",
  # Note that the tool you install has dashes- between the name, vs _underscores
  # when you call the theme in sphinx's conf.py
  "pydata-sphinx-theme",
  "sphinx-design",
  "sphinx-copybutton",
  "myst-nb",
  "myst-parser",
  "sphinx-autoapi",
  # Autodoc2 supports myst mardown
  #"sphinx-autodoc2"
]


[tool.hatch.envs.docs.scripts]
# Build your docs statically - html output
# hatch run docs:docs-html
docs-html = "sphinx-build docs/ docs/_build"
# hatch run docs:docs-html
docs-live = "sphinx-autobuild docs/ docs/_build"
# TODO: add step to clean docs directory


[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]


[tool.ruff]
lint.select = [
  "F", # pyflakes
  "I", # isort
]
lint.ignore = ["F841"]
line-length = 79
